arreglo vista mobile first app privada

--- a/admin/src/web/templates/sites/images.html
+++ b/admin/src/web/templates/sites/images.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<section class="container content-stack">
+<section class="container content-stack-new">
   <section class="site-images__intro-card">
     <header class="section-heading">
       <span class="section-kicker">Gestión de sitios</span>
